# syncyou-incall

./: .gitignore  client_secret_211136810128-l9k0tpg488njrsplmqnc86h7ueup9mt9.apps.googleusercontent.com.json  syncyou.key  syncyou.key.pub
.cursor/rules/: frontend-notification-alert.mdc  nestjs-e2e-messaging.mdc  nestjs-jest-specs.mdc  nestjs-soft-delete.mdc  nestjs-swagger-openapi.mdc
.github/workflows/: publish-tauri.yml
backend/: .env.example  .gitignore  package-lock.json  package.json
backend/src/: app.module.ts  main.ts  resolve-frontend-static-root.ts
frontend/: .gitignore  latest.json  package-lock.json  package.json  playwright.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: oauth-deep-link-bridge.tsx  otp-6-input.tsx  peer-presence-dot.tsx  photo-crop-modal.tsx  presence-status-select.tsx  window-title-bar.tsx
frontend/data/: conversation-picker-options.ts  mock-conversation-messages.ts  shareable-contacts.ts
frontend/e2e/: smoke.spec.ts
frontend/hooks/: use-direct-voice-call-audio.ts  use-group-call-media.ts  use-voice-activity-from-stream.ts  use-voice-recorder.ts
frontend/lib/: api.ts  auth-tokens.ts  avatar-url.ts  call-audio-output-preference.ts  call-camera-preference.ts  call-events.ts  call-microphone-preference.ts  call-video-layout.ts  calling-ringtone.ts  chat-map.ts  chat-muted.ts  client-geo.ts  (+22 more)
frontend/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  macos_location.rs
(+191 files in other folders)
