[package]
name = "app"
# Tem de coincidir com `version` em tauri.conf.json / package.json — o updater usa ISTO como versão local.
version = "0.0.2"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tokio = { version = "1", features = ["rt-multi-thread"] }
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
reqwest = { version = "0.12", features = ["rustls-tls"] }
tauri-plugin-deep-link = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2.10"
tauri-plugin-process = "2.3"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-core-location = "0.3"
objc2-foundation = { version = "0.3", features = ["NSArray", "NSError", "NSObject"] }

[target.'cfg(windows)'.dependencies]
webview2-com = "0.38.2"
